 Oct  01/2007
=======================
+ made option files completely optional
+ added build parameter to set default font
+ added build step to convert default font into static resource
+ moved snapshot finding logic to the game and menu classes

 Sept 26/2007
=======================
+ added options for customizing font colors, snapshot delay,
  and snapshot alpha blending
+ removed unused rompath option since this can be set via
  the mame params option
+ added check for config directory override in config.h
+ moved exception class to it's own header file

0.0.3
-------------------

- made a windows version

0.0.2
-------------------

- fixed snap shot generation, generates numbered snaps
- added hidden menu and games. prefix name with a '.'

0.0.1 - Feb 24/2003
-------------------

- initial version