@@ -7,11 +7,11 @@ height = 480
 bitdepth = 24
 fullscreen = false
 
-## Mame options
-path = "mame"
-params = "-rompath /usr/share/games/sdlmame/roms\
-          -snapshot_directory /usr/share/games/sdlmame/snap"
-snaps = "/usr/share/games/sdlmame/snap"
+## Mame path strings
+# Both paths require the '%r' specifier to be present.  This specifier will
+# replaced with the rom name.
+mame = "mame %r"
+snap = "/usr/share/games/sdlmame/snap/%r/0000.png"
 
 ## Ui options
 font = "/usr/share/lemonlauncher/slicker.ttf"
